# rpp

./: .editorconfig  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  README.txt  decoder.py  encoder.py  grammar.txt  pyproject.toml  rpp.py  scanner.py  setup.cfg  setup.py  syntax.py  tokens.py  tox.ini
.github/workflows/: python-package.yml  tests.yaml  tests.yml
data/: vst.RPP
rpp/: __init__.py  decoder.py  element.py  encoder.py  helpers.py  parsetab.py  rpp.py  scanner.py
tests/: test_element.py  test_helpers.py  test_rpp.py
tests/data/: empty.RPP  vst.RPP  with_empty_lines.RPP
