[metadata]
name = rpp
url = https://github.com/Perlence/rpp
project_urls =
    Code = https://github.com/Perlence/rpp
    Issue tracker = https://github.com/Perlence/rpp/issues
license = BSD-3-Clause
author = Sviatoslav Abakumov
author_email = dust.harvesting@gmail.com
description = REAPER Project File Parser
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Text Processing

[options]
packages = rpp
include_package_data = true
python_requires = >=3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[tool:pytest]
testpaths = tests

[flake8]
max-line-length=120
